--- a/package.json
+++ b/package.json
@@ -2,39 +2,50 @@
   "name": "@renditions/react-picture-source",
   "version": "0.1.0",
   "description": "React component for rendering HTML source tag with nice abstractions over srcset and sizes attributes.",
-  "main": "dist/cjs/index.js",
-  "module": "dist/esm/index.js",
+  "main": "Source.dist.js",
+  "browser": "Source.dist.min.js",
+  "types": "Source.d.ts",
+  "files": [
+    "Source.dist.js",
+    "Source.dist.min.js",
+    "Source.d.ts",
+    "Source.tsx"
+  ],
   "scripts": {
-    "test": "standard",
-    "compile": "npm run compile:cjs && npm run compile:esm",
-    "compile:cjs": "BABEL_MODULE_TYPE=commonjs babel src --out-dir dist/cjs",
-    "compile:esm": "BABEL_MODULE_TYPE=esm babel src --out-dir dist/esm",
-    "prepublish": "npm run compile"
+    "prepare": "./build.sh",
+    "test": "npm run lint",
+    "lint": "eslint *.ts *.tsx"
   },
   "repository": {
     "type": "git",
     "url": "git+https://github.com/renditions/react-picture-source.git"
   },
-  "author": "Stef <stef@srilq.email>",
+  "author": "Stef Jones <stef@srilq.email>",
   "license": "Apache-2.0",
   "bugs": {
     "url": "https://github.com/renditions/react-picture-source/issues"
   },
-  "homepage": "https://renditions.dev",
+  "homepage": "https://github.com/renditions/react-picture-source#readme",
   "peerDependencies": {
     "react": "16.x.x || 17.x"
   },
   "dependencies": {
-    "@renditions/get-sizes": "^3.0.0",
-    "@renditions/get-srcset": "^1.0.1"
+    "@renditions/get-sizes": "^3.1.1",
+    "@renditions/get-srcset": "^1.1.2"
   },
   "devDependencies": {
-    "@babel/cli": "7.14.8",
-    "@babel/core": "7.15.0",
-    "@babel/preset-env": "7.15.0",
-    "@babel/preset-react": "7.14.5",
+    "@types/react": "^17.0.17",
+    "@typescript-eslint/eslint-plugin": "4.29.1",
+    "esbuild": "0.12.20",
+    "eslint": "7.32.0",
+    "eslint-config-prettier": "^8.3.0",
+    "eslint-plugin-jest": "^24.4.0",
+    "eslint-plugin-prettier": "^3.4.0",
+    "eslint-plugin-react": "7.24.0",
+    "eslint-plugin-react-hooks": "4.2.0",
+    "prettier": "2.3.2",
     "react": "17.0.2",
-    "standard": "16.0.3"
+    "typescript": "4.3.5"
   },
   "keywords": [
     "react",
